--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Landing page learning project",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "sass --watch sass/main.scss css/style.css",
+    "watch:sass": "sass assets/sass/main.scss assets/css/style.css --watch",
     "devserver": "live-server",
     "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "sass sass/main.scss css/style.comp.css",
-    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
-    "prefix:css": "postcss css/style.concat.css --use autoprefixer --output css/style.prefix.css",
-    "compress:css": "sass css/style.prefix.css css/style.min.css --style=compressed",
+    "compile:sass": "sass assets/sass/main.scss assets/css/style.comp.css",
+    "concat:css": "concat -o assets/css/style.concat.css assets/css/icon-font.css assets/css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' assets/css/style.concat.css -o assets/css/style.prefix.css",
+    "compress:css": "sass assets/css/style.prefix.css assets/css/style.min.css --style=compressed",
     "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "author": "Michael K",
