--- a/package.json
+++ b/package.json
@@ -4,23 +4,18 @@
   "description": "Landing page learning project",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "sass assets/sass/main.scss assets/css/style.css --watch",
-    "devserver": "live-server",
-    "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "sass assets/sass/main.scss assets/css/style.comp.css",
-    "concat:css": "concat -o assets/css/style.concat.css assets/css/icon-font.css assets/css/style.comp.css",
-    "prefix:css": "postcss assets/css/style.concat.css --use autoprefixer -o assets/css/style.prefix.css",
-    "compress:css": "sass assets/css/style.prefix.css assets/css/style.min.css --style=compressed",
-    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
+    "sass:build": "sass assets/sass/main.scss assets/css/style.css --no-source-map --style=compressed",
+    "sass:watch": "sass assets/sass/main.scss assets/css/style.css --watch --style=expanded",
+    "build": "npm run sass:build",
+    "start": "npm run sass:watch"
   },
   "author": "Michael K",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.19",
-    "concat": "^1.0.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
-    "sass": "^1.77.2"
+    "sass": "^1.89.0"
   }
 }
