--- a/package.json
+++ b/package.json
@@ -2,20 +2,32 @@
   "name": "natours-project",
   "version": "1.0.0",
   "description": "Landing page learning project",
-  "main": "index.js",
+  "main": "public/index.html",
   "scripts": {
-    "sass:build": "sass assets/sass/main.scss assets/css/style.css --no-source-map --style=compressed",
-    "sass:watch": "sass assets/sass/main.scss assets/css/style.css --watch --style=expanded",
-    "build": "npm run sass:build",
-    "start": "npm run sass:watch"
+    "build:sass": "sass  --no-source-map src/sass:public/css",
+    "copy:assets": "copyfiles -u 1 ./src/assets/**/* public",
+    "copy:html": "copyfiles -u 1 ./src/*.html public",
+    "copy": "npm-run-all --parallel copy:*",
+    "watch:assets": "onchange \"src/assets/**/*\" -- npm run copy:html",
+    "watch:html": "onchange \"src/*.html\" -- npm run copy:html",
+    "watch:sass": "sass  --no-source-map --watch src/sass:public/css",
+    "watch": "npm-run-all --parallel watch:*",
+    "serve": "browser-sync start --server public --files public",
+    "start": "npm-run-all copy --parallel watch serve",
+    "build": "npm-run-all copy:html build:*",
+    "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
   },
   "author": "Michael K",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "browser-sync": "^3.0.4",
+    "copyfiles": "^2.4.1",
+    "cssnano": "^7.0.7",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.38",
-    "postcss-cli": "^11.0.0",
+    "onchange": "^7.1.0",
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.1",
     "sass": "^1.89.0"
   }
 }
